--- a/po/fr.po
+++ b/po/fr.po
@@ -9930,7 +9930,7 @@ msgstr "Faire un don"
 
 #: modules/gui/macosx/intf.m:557
 msgid "Online Forum"
-msgstr "Foru"
+msgstr "Forum en ligne"
 
 #: modules/gui/macosx/intf.m:567 modules/gui/wxwidgets/wizard.cpp:87
 msgid "Error"
