--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,35 @@
 $Id$
 
+Changes between 0.8.4 and 0.8.4a:
+---------------------------------
+
+Audio output:
+ * Fix a52 over spdif in alsa
+
+Decoder:
+ * Add support for new BMP and Cook (RealAudio G2) decoders in ffmpeg
+ * Add support for some non-standard FOURCCs used for H.264/H.263
+
+Demux:
+ * Fix bug with some HE-AAC audio tracks
+
+Services Discovery:
+ * HAL fixes, should now work with new API
+ * SAP, fix 20 second freeze on windows
+ * SAP, new option to enable timeshifting on announced streams
+ * UPnP fixes
+ * Avahi 0.6 support
+
+Interfaces:
+ * Mac OS X
+    - fixed encoding of H.264/H.263 content when using the wizard
+
 Changes between 0.8.2 and 0.8.4:
 --------------------------------
 
 Core support:
  * Internal strings handling is now UTF-8 based
- * New OSD system
+* New OSD system
 
 Video output:
  * Fixed problems with OpenGL output
