Improve a bit news

--- a/NEWS
+++ b/NEWS
@@ -14,9 +14,10 @@ Demux:
  * Fix bug with some HE-AAC audio tracks
 
 Services Discovery:
- * HAL fixes, should now work with new API
- * SAP, fix 20 second freeze on windows
- * SAP, new option to enable timeshifting on announced streams
+ * HAL (Linux Hardware Abstraction Layer) fixes, should now work with new API
+ * SAP 
+    - fix 20 second freeze on windows
+    - new option to enable timeshifting on announced streams
  * UPnP fixes
  * Avahi 0.6 support
 
