--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 $Id$
 
+Changes between 0.8.4a and 0.8.4b:
+----------------------------------
+
+Binary-only release to include security fix in ffmpeg [CVE-2005-4048]
+
 Changes between 0.8.4 and 0.8.4a:
 ---------------------------------
 
