Fixes to french translation Reupdate changelog

--- a/po/fr.po
+++ b/po/fr.po
@@ -17172,7 +17172,7 @@ msgstr "Largeur additionnelle des pics"
 
 #: modules/visualization/visual/visual.c:95
 msgid "Additions or subtractions of pixels on the peak width."
-msgstr "Ceci permet de modifier la largeur des pics"
+msgstr "Ceci permet de modifier la largeur des pics."
 
 #: modules/visualization/visual/visual.c:97
 msgid "V-plane color"
@@ -17235,11 +17235,11 @@ msgstr ""
 
 #: modules/visualization/xosd.c:77
 msgid "Font used to display text in the XOSD output."
-msgstr "Police utilisée pour afficher le texte dans la sortie xosd"
+msgstr "Police utilisée pour afficher le texte dans la sortie xosd."
 
 #: modules/visualization/xosd.c:79
 msgid "Color used to display text in the XOSD output."
-msgstr "Couelur utilisée pour afficher le texte dans la sortie xosd?"
+msgstr "Couleur utilisée pour afficher le texte dans la sortie xosd."
 
 #: modules/visualization/xosd.c:84
 msgid "XOSD interface"
