Possibly fix turkish l10n

--- a/po/tr.po
+++ b/po/tr.po
@@ -951,7 +951,7 @@ msgstr "Arayüz ekle"
 #: src/libvlc.c:329 src/libvlc.c:484 src/misc/modules.c:1684
 #: src/misc/modules.c:1988
 msgid "C"
-msgstr "C"
+msgstr "tr"
 
 #: src/libvlc.c:346
 msgid "Help options"
