fr.po: Fix button translation (refs: 646)

--- a/po/fr.po
+++ b/po/fr.po
@@ -1070,9 +1070,8 @@ msgid "French"
 msgstr "Français"
 
 #: src/libvlc.h:37
-#, fuzzy
 msgid "Galician"
-msgstr "Italien"
+msgstr "Galicien"
 
 #: src/libvlc.h:37 src/misc/iso-639_def.h:88
 msgid "Hebrew"
@@ -12596,9 +12595,8 @@ msgstr "Octets"
 #: modules/gui/wxwidgets/dialogs/open.cpp:490
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:195
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:242
-#, fuzzy
 msgid "&OK"
-msgstr "Ok"
+msgstr "&Ok"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:108
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:174
@@ -12609,19 +12607,16 @@ msgstr "Ok"
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:211
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:198
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:245
-#, fuzzy
 msgid "&Cancel"
-msgstr "Annuler"
+msgstr "&Annuler"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:161
-#, fuzzy
 msgid "&Delete"
 msgstr "Supprimer"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:163
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:199
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:411
-#, fuzzy
 msgid "&Clear"
 msgstr "Effacer"
 
@@ -12671,14 +12666,12 @@ msgstr ""
 "disponibles dans la fenêtre Messages."
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:181
-#, fuzzy
 msgid "&Yes"
-msgstr "oui"
+msgstr "&Oui"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:183
-#, fuzzy
 msgid "&No"
-msgstr "Norme"
+msgstr "&Non"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:196
 msgid "Don't show further errors"
@@ -12696,9 +12689,8 @@ msgid "Playlist item info"
 msgstr "Informations sur l’élément"
 
 #: modules/gui/wxwidgets/dialogs/messages.cpp:87
-#, fuzzy
 msgid "Save &As..."
-msgstr "Enregistrer sous…"
+msgstr "Enregistrer &sous…"
 
 #: modules/gui/wxwidgets/dialogs/messages.cpp:205
 msgid "Save Messages As..."
