Fix buttons l10n (fix #646)

--- a/po/de.po
+++ b/po/de.po
@@ -12657,21 +12657,18 @@ msgstr "OK"
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:211
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:198
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:245
-#, fuzzy
 msgid "&Cancel"
-msgstr "Abbrechen"
+msgstr "&Abbrechen"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:161
-#, fuzzy
 msgid "&Delete"
-msgstr "Löschen"
+msgstr "&Löschen"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:163
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:199
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:411
-#, fuzzy
 msgid "&Clear"
-msgstr "Löschen"
+msgstr "&Löschen"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:347
 msgid "You must select two bookmarks"
@@ -13105,9 +13102,8 @@ msgstr "New Age"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:208
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:79
-#, fuzzy
 msgid "&Save"
-msgstr "Sichern"
+msgstr "&Sichern"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:294
 #, fuzzy
