--- a/po/gl.po
+++ b/po/gl.po
@@ -12590,21 +12590,18 @@ msgstr "Aceptar"
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:211
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:198
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:245
-#, fuzzy
 msgid "&Cancel"
-msgstr "Cancelar"
+msgstr "&Cancelar"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:161
-#, fuzzy
 msgid "&Delete"
-msgstr "Eliminar"
+msgstr "&Eliminar"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:163
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:199
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:411
-#, fuzzy
 msgid "&Clear"
-msgstr "Limpar"
+msgstr "&Limpar"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:347
 msgid "You must select two bookmarks"
@@ -12651,11 +12648,11 @@ msgstr ""
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:181
 msgid "&Yes"
-msgstr ""
+msgstr "&Si"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:183
 msgid "&No"
-msgstr ""
+msgstr "&No"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:196
 msgid "Don't show further errors"
@@ -13010,9 +13007,8 @@ msgstr "Novo nodo"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:208
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:79
-#, fuzzy
 msgid "&Save"
-msgstr "Gardar"
+msgstr "&Gardar"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:294
 msgid ""
