--- a/po/it.po
+++ b/po/it.po
@@ -12990,20 +12990,18 @@ msgstr "OK"
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:211
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:198
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:245
-#, fuzzy
 msgid "&Cancel"
-msgstr "Annulla"
+msgstr "&Annulla"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:161
 msgid "&Delete"
-msgstr "Rimuovi"
+msgstr "&Rimuovi"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:163
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:199
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:411
-#, fuzzy
 msgid "&Clear"
-msgstr "Elimina"
+msgstr "&Elimina"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:347
 msgid "You must select two bookmarks"
