--- a/po/es.po
+++ b/po/es.po
@@ -12977,21 +12977,18 @@ msgstr "OK"
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:211
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:198
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:245
-#, fuzzy
 msgid "&Cancel"
-msgstr "Cancelar"
+msgstr "&Cancelar"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:161
-#, fuzzy
 msgid "&Delete"
-msgstr "Borrar"
+msgstr "&Borrar"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:163
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:199
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:411
-#, fuzzy
 msgid "&Clear"
-msgstr "Borrar"
+msgstr "&Borrar"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:347
 msgid "You must select two bookmarks"
@@ -13039,14 +13036,12 @@ msgstr ""
 "Mensajes."
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:181
-#, fuzzy
 msgid "&Yes"
-msgstr "Bytes"
+msgstr "&Sí"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:183
-#, fuzzy
 msgid "&No"
-msgstr "Norma"
+msgstr "&No"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:196
 msgid "Don't show further errors"
