--- a/po/hu.po
+++ b/po/hu.po
@@ -12996,21 +12996,18 @@ msgstr "OK"
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:211
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:198
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:245
-#, fuzzy
 msgid "&Cancel"
-msgstr "Mégsem"
+msgstr "&Mégsem"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:161
-#, fuzzy
 msgid "&Delete"
-msgstr "Törlés"
+msgstr "&Törlés"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:163
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:199
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:411
-#, fuzzy
 msgid "&Clear"
-msgstr "Törlés"
+msgstr "&Törlés"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:347
 msgid "You must select two bookmarks"
@@ -13058,13 +13055,12 @@ msgid ""
 msgstr ""
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:181
-#, fuzzy
 msgid "&Yes"
-msgstr "Igen"
+msgstr "&Igen"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:183
 msgid "&No"
-msgstr ""
+msgstr "&Nem"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:196
 #, fuzzy
@@ -13449,9 +13445,8 @@ msgstr "New Age"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:208
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:79
-#, fuzzy
 msgid "&Save"
-msgstr "Mentés"
+msgstr "&Mentés"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:294
 #, fuzzy
