--- a/po/sv.po
+++ b/po/sv.po
@@ -11870,21 +11870,18 @@ msgstr "OK"
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:211
 #: modules/gui/wxwidgets/dialogs/streamout.cpp:198
 #: modules/gui/wxwidgets/dialogs/subtitles.cpp:245
-#, fuzzy
 msgid "&Cancel"
-msgstr "Avbryt"
+msgstr "&Avbryt"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:161
-#, fuzzy
 msgid "&Delete"
-msgstr "Ta bort"
+msgstr "&Ta bort"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:163
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:199
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:411
-#, fuzzy
 msgid "&Clear"
-msgstr "Töm"
+msgstr "&Töm"
 
 #: modules/gui/wxwidgets/dialogs/bookmarks.cpp:347
 msgid "You must select two bookmarks"
@@ -11928,14 +11925,12 @@ msgstr ""
 "meddelandefönstret."
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:181
-#, fuzzy
 msgid "&Yes"
-msgstr "ja"
+msgstr "&Ja"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:183
-#, fuzzy
 msgid "&No"
-msgstr "Nej"
+msgstr "&Nej"
 
 #: modules/gui/wxwidgets/dialogs/interaction.cpp:196
 msgid "Don't show further errors"
@@ -12274,9 +12269,8 @@ msgstr "Ny nod"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:208
 #: modules/gui/wxwidgets/dialogs/vlm/vlm_panel.cpp:79
-#, fuzzy
 msgid "&Save"
-msgstr "Spara"
+msgstr "&Spara"
 
 #: modules/gui/wxwidgets/dialogs/preferences.cpp:294
 msgid ""
