Update NEWS and ChangeLog

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 $Id$
 
-Changes between 0.8.4a and 0.8.5-svn (not yet released):
+Changes between 0.8.4a and 0.8.5:
 --------------------------------------------------------
 
 Core support:
